Change error view on pages